--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   app:
-    image: bkimminich/juice-shop:latest-amd64
+    image: bkimminich/juice-shop:latest
     build: ./
     ports:
       - 3000:3000
