--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -2,8 +2,20 @@ app:
   applicationId: ${JS_APP_ID:2bc22eb3-7a8d-4e0a-b2e2-2c3a5430ba4b}
   env: Cypress
   host: http://localhost:3000
+  autoInputVectors: true
+  autoPolicy: true
+  sessionTokens:
+    - JSESSIONID
+    - language
+    - continueCode
+    - welcomebanner_status
+    - cookieconsent_status
+    - token
+
+  openApiConf:
+    filePath: swagger.yml
   excludePaths:
-    - ".*socket\\.io.*"
+#    - ".*socket\\.io.*"
     - ".*\\.png"
     - ".*\\.jpeg"
     - ".*\\.jpg"
@@ -16,17 +28,15 @@ app:
     - "/rest/2fa/setup"
 
   authentication:
-    external:
-      values:
-        - type: COOKIE
-          value:
-            name: token
-            val: ${JS_AUTH_TOKEN}
-        - type: TOKEN
-          tokenType: Bearer
-          value:
-            name: Authorization
-            val: ${JS_AUTH_TOKEN}
+    script:
+      name: juice-shop-auth.kts
+      parameters:
+        authEndpoint: 'http://localhost:3000/rest/user/login'
+      credentials:
+        username: 'test@test.com'
+        password: testtest
+    sessionScript:
+      name: juice-shop-session.kts
     testPath:
       type: BODY
       path: /rest/user/whoami
@@ -36,13 +46,24 @@ app:
 
 hawk:
   spider:
-    ajax: false
-    base: false
+    ajax: true
+    base: true
     custom:
       command: 'bash'
       arguments:
         - "-c"
-        - "npx cypress run --headless || true"
+        - "npx cypress run --headless --quiet || true"
       logOutputToForeground: true
       environment:
         NO_PROXY: "<-loopback>"
+
+hawkAddOn:
+  scripts:
+    - name: juice-shop-auth.kts
+      path: hawkscripts
+      type: authentication
+      language: KOTLIN
+    - name: juice-shop-session.kts
+      path: hawkscripts
+      type: session
+      language: KOTLIN
